--- a/css/style1.css
+++ b/css/style1.css
@@ -139,6 +139,16 @@ body::before {
 #big-box {
     margin-top: 2rem;
 }
+#menu a {
+    color: white; /* Color morado inicial */
+    text-decoration: none !important;
+    transition: color 0.3s ease; /* Transición suave */
+}
+
+/* Efecto hover - cambia color al pasar el mouse */
+#menu a:hover { 
+    text-decoration: none !important;
+}
 
 
 /* Añade transparencia al header para mejor contraste */
